Fix visibility issue in languages menu on tablet; header section completed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -13,5 +13,6 @@ $secondary-font: "Lora", sans-serif;
 $black: #333;
 $grey: #5f6570;
 $blue: #6ca5bc;
-$blue-light: #95c6d9;;
+$blue-light: #95c6d9;
+$dark-blue: #305281;
 $white: #fff;
